	  doesn't return SANE_STATUS_GOOD. Added SANE_STATUS_INVAL to
	  return codes for sane_start. Description of sane_set_io_mode is
	  more precise.
	* sanei/sanei_usb.c: Really check for bulk_out ep when writing.
	* TODO: Added microtek2 problem. Updated sane.tex and desc sections.
	  Added scanimage width/height problem. Added possible solution to po
	  file mess.

2002-10-15  Peter Kirchgessner <peter@kirchgessner.net>

	* backend/hp.conf: Added comment for USB-scanner

2002-10-14  Peter Fales <peter@fales-lorenz.net>

	* backend/dc240.h,backend/dc240.c: Use portable code for camera
	  structures that does not depend on gcc or little-endian byte order

2002-10-14  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* backend/snapscan.h backend/snapscan.c backend/snapscan.conf
	  doc/descriptions/snapscan.desc: SnapScan backend 1.4.17 -
	  added ID string for SnapScan e10, added Mitsubishi Diamandview
	  648UT in desc file.

2002-10-11  Peter Fales <peter@fales-lorenz.net>

	* backend/dc240.h - Add message to #error as required by ANSI

2002-10-11  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/mustek.c doc/mustek/mustek.CHANGES: Fixed shutting off
	  the lamp for the Paragon 1200 A3 Pro.
	* doc/descriptions/mustek.desc: Updated version number and A3 Pro
	  information.

2002-10-10  Petter Reinholdtsen <pere@td.org.uit.no>

	* backend/canon630u-common.c: Change type of size parameter from
	  'unsigned int' to 'size_t' for gl640WriteBulk() and
	  gl640ReadBulk() to avoid crash on platforms where
	  'sizeof(size_t) > sizeof(int)'.

	* backend/coolscan.c: Remove semicolon at the end of functions.

2002-10-09  Frank Zago  <fzago at austin dot rr dot com>

	* backend/teco1.c backend/teco1.conf doc/descriptions/teco1.desc:
	  Added entry for AVEC color 2412.

2002-10-09  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/microtek2.desc: Added per-scanner status (from
	  Karsten Festag <karsten.festag@gmx.de>).
