@@ -8,6 +8,7 @@
 	* TODO: Added microtek2 problem. Updated sane.tex and desc sections.
 	  Added scanimage width/height problem. Added possible solution to po
 	  file mess.
+	* doc/Makefile.in doc/sane-config.man: Added man page for sane-config.
 
 2002-10-15  Peter Kirchgessner <peter@kirchgessner.net>
 
